# measurement-maturity-framework

./: .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  SCORING_METHODOLOGY.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  test.yml
analysis/: bayesian_robustness.ipynb  build_calibration_figures.py  build_calibration_notebook.py  build_notebook.py  build_ranking_worksheet.py  generate_synthetic_packs.py  run_analysis.py  weight_calibration.ipynb
analysis/calibration/: _claude_ranking.csv  _mmf_reference_scores.csv  _user_ranking.csv  _user_ranking_v2.csv  all_rankings_merged.csv  calibration_results.json  fitted_weights.json
case_studies/: 01_netflix_actual.yaml  01_netflix_cautious.yaml  01_netflix_run.py  01_netflix_view_redefinition.md  02_facebook_video_duration.md  02_facebook_video_duration.yaml  03_uber_mapc.md  03_uber_mapc.yaml  README.md
docs/: README.md  SCORING_METHODOLOGY.md
examples/: README.md  generic_product_metric_pack.yaml  mixed_maturity_pack.yaml  spreadsheet_pipeline_pack.yaml
mmf/: __init__.py  ai_helper.py  bayesian_scoring.py  components.py  config.py  layout.py  mermaid.py  scoring.py  sidebar.py  streamlit_compat.py  streamlit_mermaid.py  suggestions.py  theme.css  ui.py  validator.py
templates/: metric_pack_template.yaml  metric_template.yaml
tests/: test_bayesian_scoring.py  test_config.py  test_integration.py  test_mermaid.py  test_package_api.py  test_scorer.py  test_sidebar.py  test_streamlit_compat.py  test_suggestions.py  test_validator.py
(+30 files in other folders)
